worked on infinite scroll + css refactoring-ish

--- a/src/resources/localization/english.json
+++ b/src/resources/localization/english.json
@@ -44,6 +44,10 @@
                 "embedScratch": "Embed Scratch Games",
                 "embedCodeDotOrg": "Embed code.org Projects"
             },
+            "textSize": {
+                "title": "Text Size",
+                "postTextSize": "Post Text Size"
+            },
             "blockedUsers": {
                 "title": "Blocked Users"
             },
