used fa-icons to do stuff

--- a/src/resources/localization/english.json
+++ b/src/resources/localization/english.json
@@ -5,6 +5,7 @@
     },
     "mainpage": {
         "sidebar": {
+            "notifications": "Notifications",
             "refresh": "Refresh",
             "post": "Post",
             "logout": "Logout",
