moved tabs a bit

--- a/src/resources/localization/english.json
+++ b/src/resources/localization/english.json
@@ -5,6 +5,7 @@
     },
     "mainpage": {
         "sidebar": {
+            "home": "Home",
             "notifications": "Notifications",
             "refresh": "Refresh",
             "post": "Post",
