--- a/src/resources/localization/retarded.json
+++ b/src/resources/localization/retarded.json
@@ -13,6 +13,9 @@
             "settings": "Settings"
         }
     },
+    "createpostpage": {
+        "title": "Make thought of mind"
+    },
     "settingspage": {
         "title": "Change Things",
 
