i dont even know what i'm doing anymore

--- a/src/resources/localization/english.json
+++ b/src/resources/localization/english.json
@@ -10,7 +10,8 @@
             "refresh": "Refresh",
             "post": "Post",
             "logout": "Logout",
-            "settings": "Settings"
+            "settings": "Settings",
+            "search": "Search"
         }
     },
     "createpostpage": {
