sign in page stuff

--- a/resources/localization/english.json
+++ b/resources/localization/english.json
@@ -53,6 +53,7 @@
                 "embedYouTube": "Embed YouTube Videos",
                 "embedTwitchStreams": "Embed Twitch Streams",
                 "embedTwitchLiveChat": "Embed Twitch Live Chat",
+                "embedGIFs": "Embed GIFs",
                 "embedScratch": "Embed Scratch Games",
                 "embedCodeDotOrg": "Embed code.org Projects"
             },
